Add support to kmfl to send nonprinting keys (F1, F2, backspace, etc) to client; change Makefile.am to use correct directories for current version of scim

--- a/scim_kmfl_imengine/src/Makefile.am
+++ b/scim_kmfl_imengine/src/Makefile.am
@@ -29,7 +29,7 @@ kmfl_la_CXXFLAGS =\
 	 -O1\
 	 -g
 
-moduledir		= $(libdir)/scim-1.0/1.0.0/IMEngine
+moduledir		= $(libdir)/scim-1.0/$(SCIM_BINARY_VERSION)/IMEngine
 module_LTLIBRARIES	= kmfl.la
 
 kmfl_la_SOURCES = \
@@ -37,7 +37,7 @@ kmfl_la_SOURCES = \
 	xkbmap.cpp
 
 kmfl_la_LDFLAGS = \
-	-L/usr/X11R6/lib -avoid-version -rpath $(libdir)/scim-1.0/1.0.0/IMEngine  -module
+	-L/usr/X11R6/lib -avoid-version -rpath $(libdir)/scim-1.0/$(SCIM_BINARY_VERSION)/IMEngine  -module
 
 kmfl_la_LIBADD = \
 	 -lkmfl -lxkbfile -lX11
