--- a/scim_kmfl_imengine/src/Makefile.in
+++ b/scim_kmfl_imengine/src/Makefile.in
@@ -256,14 +256,14 @@ kmfl_la_CXXFLAGS = \
 	 -O1\
 	 -g
 
-moduledir = $(libdir)/scim-1.0/1.0.0/IMEngine
+moduledir = $(libdir)/scim-1.0/$(SCIM_BINARY_VERSION)/IMEngine
 module_LTLIBRARIES = kmfl.la
 kmfl_la_SOURCES = \
 	scim_kmfl_imengine.cpp \
 	xkbmap.cpp
 
 kmfl_la_LDFLAGS = \
-	-L/usr/X11R6/lib -avoid-version -rpath $(libdir)/scim-1.0/1.0.0/IMEngine  -module
+	-L/usr/X11R6/lib -avoid-version -rpath $(libdir)/scim-1.0/$(SCIM_BINARY_VERSION)/IMEngine  -module
 
 kmfl_la_LIBADD = \
 	 -lkmfl -lxkbfile -lX11
