--- a/scim_kmfl_imengine/configure.in
+++ b/scim_kmfl_imengine/configure.in
@@ -45,7 +45,7 @@ SCIM_MINOR=`pkg-config --modversion scim | \
            sed 's/\([[0-9]]*\).\([[0-9]]*\).\([[0-9]]*\)/\2/'`
 AC_SUBST(SCIM_MINOR)
 
-SCIM_BINARY_VERSION=${SCIM_MAJOR}.${SCIM_MINOR}.0
+SCIM_BINARY_VERSION=`pkg-config --variable=scim_binary_version scim`
 AC_SUBST(SCIM_BINARY_VERSION)
 
 AM_GLIB_DEFINE_LOCALEDIR(GTK_LOCALEDIR)
