update for loading kmn file on the fly without requiring precompilation

--- a/kmflcomp/Makefile.am
+++ b/kmflcomp/Makefile.am
@@ -3,7 +3,7 @@
 ## If you don't want it to overwrite it,
 ## 	Please disable it in the Anjuta project configuration
 
-SUBDIRS = src
+SUBDIRS = include src kmfl_compiler
 
 kmflcompdocdir = ${prefix}/doc/kmflcomp
 kmflcompdoc_DATA = \
