--- a/kmflcomp/include/Makefile.am
+++ b/kmflcomp/include/Makefile.am
@@ -4,9 +4,10 @@
 ## If you don't want it to overwrite it,
 ## 	Please disable it in the Anjuta project configuration
 
-kmflcomp_includedir = $(pkgincludedir)
+kmflcomp_includedir = $(includedir)/kmfl
 
-kmflcomp_include_DATA = \
-
+kmflcomp_include_DATA =\
+	kmfl.h \
+	kmflcomp.h
 
 EXTRA_DIST = $(kmflcomp_include_DATA)
