bugfix in store definitions; increase max length of names

--- a/kmflcomp/kmfl_compiler/Makefile.am
+++ b/kmflcomp/kmfl_compiler/Makefile.am
@@ -16,6 +16,6 @@ bin_PROGRAMS = kmflcomp
 kmflcomp_SOURCES = \
 	kmfl_compiler.c
 
-kmflcomp_LDFLAGS = -lefence
+kmflcomp_LDFLAGS = 
 
 kmflcomp_LDADD = ../src/.libs/libkmflcomp.a
