--- a/kmflcomp/include/Makefile
+++ b/kmflcomp/include/Makefile
@@ -58,14 +58,14 @@ am__installdirs = "$(DESTDIR)$(kmflcomp_includedir)"
 kmflcomp_includeDATA_INSTALL = $(INSTALL_DATA)
 DATA = $(kmflcomp_include_DATA)
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /home/doug/Projects/kmflcvs/kmflcomp-0.6/missing --run aclocal-1.9
+ACLOCAL = ${SHELL} /home/doug/Projects/kmflcvs/kmflcomp-0.7/missing --run aclocal-1.9
 AMDEP_FALSE = #
 AMDEP_TRUE = 
-AMTAR = ${SHELL} /home/doug/Projects/kmflcvs/kmflcomp-0.6/missing --run tar
+AMTAR = ${SHELL} /home/doug/Projects/kmflcvs/kmflcomp-0.7/missing --run tar
 AR = ar
-AUTOCONF = ${SHELL} /home/doug/Projects/kmflcvs/kmflcomp-0.6/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/doug/Projects/kmflcvs/kmflcomp-0.6/missing --run autoheader
-AUTOMAKE = ${SHELL} /home/doug/Projects/kmflcvs/kmflcomp-0.6/missing --run automake-1.9
+AUTOCONF = ${SHELL} /home/doug/Projects/kmflcvs/kmflcomp-0.7/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/doug/Projects/kmflcvs/kmflcomp-0.7/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/doug/Projects/kmflcvs/kmflcomp-0.7/missing --run automake-1.9
 AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
@@ -100,7 +100,7 @@ LIBS =
 LIBTOOL = $(SHELL) $(top_builddir)/libtool
 LN_S = ln -s
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /home/doug/Projects/kmflcvs/kmflcomp-0.6/missing --run makeinfo
+MAKEINFO = ${SHELL} /home/doug/Projects/kmflcvs/kmflcomp-0.7/missing --run makeinfo
 NO_PREFIX_PACKAGE_DATA_DIR = share/kmflcomp
 NO_PREFIX_PACKAGE_DOC_DIR = doc/kmflcomp
 NO_PREFIX_PACKAGE_HELP_DIR = share/kmflcomp/help
@@ -109,12 +109,12 @@ NO_PREFIX_PACKAGE_PIXMAPS_DIR = share/kmflcomp/pixmaps
 OBJEXT = o
 PACKAGE = kmflcomp
 PACKAGE_BUGREPORT = 
-PACKAGE_DATA_DIR = /usr/local/share/kmflcomp
-PACKAGE_DOC_DIR = /usr/local/doc/kmflcomp
-PACKAGE_HELP_DIR = /usr/local/share/kmflcomp/help
-PACKAGE_MENU_DIR = /usr/local/share/kmflcomp
+PACKAGE_DATA_DIR = /usr/share/kmflcomp
+PACKAGE_DOC_DIR = /usr/doc/kmflcomp
+PACKAGE_HELP_DIR = /usr/share/kmflcomp/help
+PACKAGE_MENU_DIR = /usr/share/kmflcomp
 PACKAGE_NAME = 
-PACKAGE_PIXMAPS_DIR = /usr/local/share/kmflcomp/pixmaps
+PACKAGE_PIXMAPS_DIR = /usr/share/kmflcomp/pixmaps
 PACKAGE_STRING = 
 PACKAGE_TARNAME = 
 PACKAGE_VERSION = 
@@ -159,14 +159,14 @@ host_os = linux
 host_vendor = suse
 includedir = ${prefix}/include
 infodir = ${prefix}/info
-install_sh = /home/doug/Projects/kmflcvs/kmflcomp-0.6/install-sh
+install_sh = /home/doug/Projects/kmflcvs/kmflcomp-0.7/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localstatedir = ${prefix}/var
 mandir = ${prefix}/man
 mkdir_p = mkdir -p --
 oldincludedir = /usr/include
-prefix = /usr/local
+prefix = /usr
 program_transform_name = s,x,x,
 sbindir = ${exec_prefix}/sbin
 sharedstatedir = ${prefix}/com
