Update Makefile.am and Makefile.in to remove ConvertUTF.c

--- a/kmflcomp/src/Makefile.am
+++ b/kmflcomp/src/Makefile.am
@@ -18,8 +18,7 @@ libkmflcomp_la_SOURCES = \
 	lex.l\
 	kmflcomp.c\
 	memman.c\
-	utfconv.c \
-	ConvertUTF.c
+	utfconv.c
 
 libkmflcomp_la_LDFLAGS = 
 
