Remove generated files from CVS Add me to uploaders

--- a/kmflcomp/debian/control
+++ b/kmflcomp/debian/control
@@ -1,6 +1,7 @@
 Source: kmflcomp
 Priority: optional
 Maintainer: Doug Rintoul <doug_rintoul@sil.org>
+Uploaders: Daniel Glassey <wdg@debian.org>
 Build-Depends: debhelper (>= 4.0.0)
 Standards-Version: 3.6.1
 
