--- a/kmflcomp/src/Makefile.in
+++ b/kmflcomp/src/Makefile.in
@@ -209,8 +209,9 @@ libkmflcomp_la_SOURCES = \
 	lex.l\
 	kmflcomp.c\
 	memman.c\
-	utfconv.c 
+	utfconv.c
 
+EXTRA_DIST = compiler.h utfconv.h memman.h
 libkmflcomp_la_LDFLAGS = 
 libkmflcomp_la_LIBADD = 
 AM_YFLAGS = -d
