rename package to libkmfl0 to satisy lintian need to build depend on cdbs etc

--- a/libkmfl/debian/control
+++ b/libkmfl/debian/control
@@ -1,20 +1,21 @@
 Source: libkmfl
 Priority: optional
 Maintainer: Doug Rintoul <doug_rintoul@sil.org>
-Build-Depends: automake1.6 | automake1.7 | automake1.9, libtool, debhelper (>= 4.0.0), libkmflcomp-dev
-Standards-Version: 3.6.1
+Uploaders: Daniel Glassey <wdg@debian.org>
+Build-Depends: cdbs (>= 0.4.27-1), debhelper (>= 4.1.0), libkmflcomp-dev
+Standards-Version: 3.6.2
 
 Package: libkmfl-dev
 Section: libdevel
 Architecture: i386
-Depends: libkmfl (= ${Source-Version})
+Depends: libkmfl0 (= ${Source-Version})
 Description: A Library for providing Keyman(C) services to Linux - development
  This package contains the header and development files needed to build
  programs and packages using libkmfl.
 
-Package: libkmfl
+Package: libkmfl0
 Section: libs
 Architecture: i386
-Depends: ${shlibs:Depends}, libkmflcomp
+Depends: ${shlibs:Depends}
 Description: A Library for providing Keyman(C) services to Linux - runtime
  This package contains the runtime part of libkmfl.
