build depends needs to include cdbs

--- a/kmflcomp/debian/control
+++ b/kmflcomp/debian/control
@@ -2,7 +2,7 @@ Source: kmflcomp
 Priority: optional
 Maintainer: Doug Rintoul <doug_rintoul@sil.org>
 Uploaders: Daniel Glassey <wdg@debian.org>
-Build-Depends: debhelper (>= 4.0.0)
+Build-Depends: cdbs (>= 0.4.27-1), debhelper (>= 4.1.0)
 Standards-Version: 3.6.2
 
 Package: libkmflcomp-dev
