--- a/scim_kmfl_imengine/Makefile.in
+++ b/scim_kmfl_imengine/Makefile.in
@@ -153,6 +153,7 @@ INTLTOOL_PONG_RULE = @INTLTOOL_PONG_RULE@
 INTLTOOL_PROP_RULE = @INTLTOOL_PROP_RULE@
 INTLTOOL_SCHEMAS_RULE = @INTLTOOL_SCHEMAS_RULE@
 INTLTOOL_SERVER_RULE = @INTLTOOL_SERVER_RULE@
+INTLTOOL_SERVICE_RULE = @INTLTOOL_SERVICE_RULE@
 INTLTOOL_SHEET_RULE = @INTLTOOL_SHEET_RULE@
 INTLTOOL_SOUNDLIST_RULE = @INTLTOOL_SOUNDLIST_RULE@
 INTLTOOL_THEME_RULE = @INTLTOOL_THEME_RULE@
@@ -198,6 +199,8 @@ PO_IN_DATADIR_FALSE = @PO_IN_DATADIR_FALSE@
 PO_IN_DATADIR_TRUE = @PO_IN_DATADIR_TRUE@
 RANLIB = @RANLIB@
 SCIM_BINARY_VERSION = @SCIM_BINARY_VERSION@
+SCIM_CFLAGS = @SCIM_CFLAGS@
+SCIM_LIBS = @SCIM_LIBS@
 SCIM_MAJOR = @SCIM_MAJOR@
 SCIM_MINOR = @SCIM_MINOR@
 SET_MAKE = @SET_MAKE@
@@ -263,7 +266,8 @@ libkmfldoc_DATA = \
 	TODO\
 	ABOUT-NLS
 
-EXTRA_DIST = $(libkmfldoc_DATA)
+EXTRA_DIST = $(libkmfldoc_DATA) intltool-extract.in intltool-merge.in intltool-update.in
+DISTCLEANFILES = intltool-extract intltool-merge intltool-update
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
 
@@ -654,6 +658,7 @@ clean-generic:
 
 distclean-generic:
 	-test -z "$(CONFIG_CLEAN_FILES)" || rm -f $(CONFIG_CLEAN_FILES)
+	-test -z "$(DISTCLEANFILES)" || rm -f $(DISTCLEANFILES)
 
 maintainer-clean-generic:
 	@echo "This command is intended for maintainers to use"
