--- a/scim_kmfl_imengine/scim_kmfl_imengine_setup/Makefile.in
+++ b/scim_kmfl_imengine/scim_kmfl_imengine_setup/Makefile.in
@@ -200,6 +200,8 @@ PO_IN_DATADIR_FALSE = @PO_IN_DATADIR_FALSE@
 PO_IN_DATADIR_TRUE = @PO_IN_DATADIR_TRUE@
 RANLIB = @RANLIB@
 SCIM_BINARY_VERSION = @SCIM_BINARY_VERSION@
+SCIM_CFLAGS = @SCIM_CFLAGS@
+SCIM_LIBS = @SCIM_LIBS@
 SCIM_MAJOR = @SCIM_MAJOR@
 SCIM_MINOR = @SCIM_MINOR@
 SET_MAKE = @SET_MAKE@
@@ -254,7 +256,7 @@ sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 INCLUDES = \
-	 -I$(includedir)/scim-1.0 \
+	 $(SCIM_CFLAGS)\
 	 $(GTK_CFLAGS)
 
 kmfl_imengine_setup_la_CFLAGS = \
@@ -284,7 +286,7 @@ kmfl_imengine_setup_la_LIBADD = \
 	$(GTK_LIBS) \
 	-lkmfl
 
-EXTRA_DIST = utfconv.h
+EXTRA_DIST = utfconv.h scim_private.h
 all: all-am
 
 .SUFFIXES:
