--- a/scim_kmfl_imengine/src/Makefile.am
+++ b/scim_kmfl_imengine/src/Makefile.am
@@ -10,10 +10,8 @@ SCIM_MINOR=@SCIM_MINOR@
 
 SCIM_BINARY_VERSION=@SCIM_BINARY_VERSION@
 
-INCLUDES =\
-	 -I$(includedir)/scim-1.0
-
 kmfl_la_CFLAGS =\
+	$(SCIM_CFLAGS)\
 	-DSCIM_ICONDIR=\"$(datadir)/scim/icons\"\
 	-DSCIM_$(SCIM_MAJOR)_$(SCIM_MINOR)_0\
 	-DSCIM_KMFL_IMENGINE_MODULE_DATADIR=\"$(datadir)/scim/kmfl\" \
@@ -22,12 +20,15 @@ kmfl_la_CFLAGS =\
 	 -g
 
 kmfl_la_CXXFLAGS =\
+	$(SCIM_CFLAGS)\
 	-DSCIM_ICONDIR=\"$(datadir)/scim/icons\"\
 	-DSCIM_$(SCIM_MAJOR)_$(SCIM_MINOR)_0\
 	-DSCIM_KMFL_IMENGINE_MODULE_DATADIR=\"$(datadir)/scim/kmfl\" \
 	 -Wall\
 	 -O1\
 	 -g
+
+EXTRA_DIST = xkbmap.h scim_kmfl_imengine.h stringtok.h scim_kmfl_imengine_private.h
 
 moduledir		= $(libdir)/scim-1.0/$(SCIM_BINARY_VERSION)/IMEngine
 module_LTLIBRARIES	= kmfl.la
