--- a/scim_kmfl_imengine/configure.in
+++ b/scim_kmfl_imengine/configure.in
@@ -4,7 +4,7 @@ dnl If you don't want it to overwrite it,
 dnl 	Please disable it in the Anjuta project configuration
 
 AC_INIT(configure.in)
-AM_INIT_AUTOMAKE(scim_kmfl_imengine, 0.3)
+AM_INIT_AUTOMAKE(scim_kmfl_imengine, 0.9.3)
 AM_CONFIG_HEADER(config.h)
 
 AC_ISC_POSIX
@@ -33,6 +33,7 @@ dnl Checks for libraries.
 dnl Checks for header files.
 AC_CHECK_HEADERS([langinfo.h libintl.h string.h dirent.h])
 
+PKG_CHECK_MODULES(SCIM, scim,,exit)
 dnl Checks for typedefs, structures, and compiler characteristics.
 dnl Checks for library functions.
 dnl Checks for Additional stuffs.
@@ -47,6 +48,10 @@ AC_SUBST(SCIM_MINOR)
 
 SCIM_BINARY_VERSION=`pkg-config --variable=scim_binary_version scim`
 AC_SUBST(SCIM_BINARY_VERSION)
+
+AC_SUBST(SCIM_LIBS)
+AC_SUBST(SCIM_CFLAGS)
+
 
 AM_GLIB_DEFINE_LOCALEDIR(GTK_LOCALEDIR)
 
