--- a/scim_kmfl_imengine/debian/control
+++ b/scim_kmfl_imengine/debian/control
@@ -1,8 +1,10 @@
 Source: scim-kmfl-imengine
 Priority: optional
+Section: utils
 Maintainer: Doug Rintoul <doug_rintoul@sil.org>
+Uploaders: Daniel Glassey <wdg@debian.org>
 Build-Depends: debhelper (>= 4.0.0), libkmfl-dev, libscim-dev (>=1.4.1), libxkbfile-dev
-Standards-Version: 3.6.1
+Standards-Version: 3.6.2
 
 Package: scim-kmfl-imengine
 Section: utils
@@ -12,7 +14,7 @@ Description: KMFL imengine for SCIM
  KMFL imengine for SCIM
 
 Package: scim-kmfl-imengine-dev
-Section: libdev
+Section: libdevel
 Architecture: i386
 Depends: scim-kmfl-imengine
 Description: KMFL imengine for SCIM
