--- a/kmflcomp/include/Makefile.in
+++ b/kmflcomp/include/Makefile.in
@@ -175,7 +175,8 @@ target_alias = @target_alias@
 kmflcomp_includedir = $(includedir)/kmfl
 kmflcomp_include_DATA = \
 	kmfl.h \
-	kmflcomp.h
+	kmflcomp.h \
+	kmflutfconv.h
 
 EXTRA_DIST = $(kmflcomp_include_DATA)
 all: all-am
