Use UTF conversion routines in kmflcomp rather than a local copy

--- a/scim_kmfl_imengine/scim_kmfl_imengine_setup/Makefile.in
+++ b/scim_kmfl_imengine/scim_kmfl_imengine_setup/Makefile.in
@@ -275,7 +275,7 @@ kmfl_imengine_setup_la_LIBADD = \
 	$(GTK_LIBS) \
 	-lkmfl
 
-EXTRA_DIST = utfconv.h scim_private.h
+EXTRA_DIST = scim_private.h
 all: all-am
 
 .SUFFIXES:
