--- a/scim_kmfl_imengine/debian/control
+++ b/scim_kmfl_imengine/debian/control
@@ -9,7 +9,7 @@ Standards-Version: 3.6.2
 Package: scim-kmfl-imengine
 Section: utils
 Architecture: any
-Depends: libkmflcomp, libkmfl, scim (>=1.4.1)
+Depends: libkmflcomp0, libkmfl0, scim (>=1.4.1)
 Description: KMFL imengine for SCIM
  KMFL imengine for SCIM
 
