--- a/scim_kmfl_imengine/configure.in
+++ b/scim_kmfl_imengine/configure.in
@@ -4,7 +4,7 @@ dnl If you don't want it to overwrite it,
 dnl 	Please disable it in the Anjuta project configuration
 
 AC_INIT(configure.in)
-AM_INIT_AUTOMAKE(scim-kmfl-imengine, 0.9.4)
+AM_INIT_AUTOMAKE(scim-kmfl-imengine, 0.9.6)
 AM_CONFIG_HEADER(config.h)
 
 AC_ISC_POSIX
@@ -52,6 +52,8 @@ AC_SUBST(SCIM_BINARY_VERSION)
 AC_SUBST(SCIM_LIBS)
 AC_SUBST(SCIM_CFLAGS)
 
+SCIM_DATADIR="$datadir/scim"
+AC_SUBST(SCIM_DATADIR)
 
 AM_GLIB_DEFINE_LOCALEDIR(GTK_LOCALEDIR)
 
@@ -134,5 +136,7 @@ intl/Makefile
 po/Makefile.in
 src/Makefile
 scim_kmfl_imengine_setup/Makefile
+data/Makefile
+data/icons/Makefile
 ])
 
