--- a/scim_kmfl_imengine/debian/control
+++ b/scim_kmfl_imengine/debian/control
@@ -3,19 +3,13 @@ Priority: optional
 Section: utils
 Maintainer: Doug Rintoul <doug_rintoul@sil.org>
 Uploaders: Daniel Glassey <wdg@debian.org>
-Build-Depends: debhelper (>= 4.0.0), libkmfl-dev, libscim-dev (>=1.4.1), libxkbfile-dev
+Build-Depends: debhelper (>= 4.0.0), libkmfl-dev, libscim-dev (>=1.4.4), libxkbfile-dev, libpstreams-dev
 Standards-Version: 3.6.2
 
 Package: scim-kmfl-imengine
 Section: utils
 Architecture: any
-Depends: libkmflcomp0, libkmfl0, scim (>=1.4.1)
+Depends: libkmflcomp0, libkmfl0, scim (>=1.4.4), scim-qtimm, im-switch
 Description: KMFL imengine for SCIM
  KMFL imengine for SCIM
 
-Package: scim-kmfl-imengine-dev
-Section: libdevel
-Architecture: any
-Depends: scim-kmfl-imengine
-Description: KMFL imengine for SCIM
- KMFL imengine for SCIM
