Add Keyman 7.0 support, Remove debugging output

--- a/scim_kmfl_imengine/Makefile.am
+++ b/scim_kmfl_imengine/Makefile.am
@@ -1,22 +1,6 @@
-## Process this file with automake to produce Makefile.in
-## Created by Anjuta - will be overwritten
-## If you don't want it to overwrite it,
-## 	Please disable it in the Anjuta project configuration
-
 SUBDIRS = intl po src scim_kmfl_imengine_setup data
 
-libkmfldocdir = ${prefix}/doc/scim_kmfl_imengine
-libkmfldoc_DATA = \
-	README\
-	COPYING\
-	AUTHORS\
-	ChangeLog\
-	INSTALL\
-	NEWS\
-	TODO\
-	ABOUT-NLS
-
-EXTRA_DIST = $(libkmfldoc_DATA) intltool-extract.in intltool-merge.in intltool-update.in
+EXTRA_DIST = intltool-extract.in intltool-merge.in intltool-update.in
 DISTCLEANFILES = intltool-extract intltool-merge intltool-update
 
 
