--- a/scim_kmfl_imengine/scim_kmfl_imengine_setup/Makefile.in
+++ b/scim_kmfl_imengine/scim_kmfl_imengine_setup/Makefile.in
@@ -314,7 +314,7 @@ kmfl_imengine_setup_la_LIBADD = \
 	$(GTK_LIBS) \
 	-lkmfl
 
-EXTRA_DIST = scim_private.h
+EXTRA_DIST = kmfl_private.h
 all: all-am
 
 .SUFFIXES:
