--- a/kmflcomp/config.h.in
+++ b/kmflcomp/config.h.in
@@ -1,24 +1,28 @@
-/* config.h.in.  Generated from configure.in by autoheader.  */
+/* config.h.in.  Generated from configure.ac by autoheader.  */
+
+/* */
 #undef ENABLE_NLS
-#undef HAVE_CATGETS
-#undef HAVE_GETTEXT
-#undef HAVE_LC_MESSAGES
-#undef HAVE_STPCPY
-#undef HAVE_LIBSM
-#undef PACKAGE_LOCALE_DIR
-#undef PACKAGE_DOC_DIR
-#undef PACKAGE_DATA_DIR
-#undef PACKAGE_PIXMAPS_DIR
-#undef PACKAGE_HELP_DIR
-#undef PACKAGE_MENU_DIR
-#undef PACKAGE_SOURCE_DIR
+
+/* */
 #undef GETTEXT_PACKAGE
+
+/* */
+#undef HAVE_CATGETS
 
 /* Define to 1 if you have the <dlfcn.h> header file. */
 #undef HAVE_DLFCN_H
 
+/* */
+#undef HAVE_GETTEXT
+
 /* Define to 1 if you have the <inttypes.h> header file. */
 #undef HAVE_INTTYPES_H
+
+/* */
+#undef HAVE_LC_MESSAGES
+
+/* */
+#undef HAVE_LIBSM
 
 /* Define to 1 if you have the <memory.h> header file. */
 #undef HAVE_MEMORY_H
@@ -28,6 +32,9 @@
 
 /* Define to 1 if you have the <stdlib.h> header file. */
 #undef HAVE_STDLIB_H
+
+/* */
+#undef HAVE_STPCPY
 
 /* Define to 1 if you have the <strings.h> header file. */
 #undef HAVE_STRINGS_H
@@ -44,20 +51,48 @@
 /* Define to 1 if you have the <unistd.h> header file. */
 #undef HAVE_UNISTD_H
 
+/* Define to the sub-directory in which libtool stores uninstalled libraries.
+   */
+#undef LT_OBJDIR
+
 /* Name of package */
 #undef PACKAGE
 
 /* Define to the address where bug reports for this package should be sent. */
 #undef PACKAGE_BUGREPORT
 
+/* */
+#undef PACKAGE_DATA_DIR
+
+/* */
+#undef PACKAGE_DOC_DIR
+
+/* */
+#undef PACKAGE_HELP_DIR
+
+/* */
+#undef PACKAGE_LOCALE_DIR
+
+/* */
+#undef PACKAGE_MENU_DIR
+
 /* Define to the full name of this package. */
 #undef PACKAGE_NAME
+
+/* */
+#undef PACKAGE_PIXMAPS_DIR
+
+/* */
+#undef PACKAGE_SOURCE_DIR
 
 /* Define to the full name and version of this package. */
 #undef PACKAGE_STRING
 
 /* Define to the one symbol short name of this package. */
 #undef PACKAGE_TARNAME
+
+/* Define to the home page for this package. */
+#undef PACKAGE_URL
 
 /* Define to the version of this package. */
 #undef PACKAGE_VERSION
