--- a/kmflcomp/configure.ac
+++ b/kmflcomp/configure.ac
@@ -3,8 +3,9 @@ dnl Created by Anjuta - will be overwritten
 dnl If you don't want it to overwrite it,
 dnl 	Please disable it in the Anjuta project configuration
 
-AC_INIT(configure.in)
-AM_INIT_AUTOMAKE(kmflcomp, 0.9.10)
+AC_INIT(kmflcomp, 0.9.10)
+AM_INIT_AUTOMAKE
+
 AM_CONFIG_HEADER(config.h)
 
 AC_ISC_POSIX
@@ -74,6 +75,21 @@ NO_PREFIX_PACKAGE_MENU_DIR="${packagemenudir}"
 AC_SUBST(NO_PREFIX_PACKAGE_MENU_DIR)
 PACKAGE_MENU_DIR="${packageprefix}/${packagemenudir}"
 AC_SUBST(PACKAGE_MENU_DIR)
+
+AH_TEMPLATE([ENABLE_NLS])
+AH_TEMPLATE([HAVE_CATGETS])
+AH_TEMPLATE([HAVE_GETTEXT])
+AH_TEMPLATE([HAVE_LC_MESSAGES])
+AH_TEMPLATE([HAVE_STPCPY])
+AH_TEMPLATE([HAVE_LIBSM])
+AH_TEMPLATE([PACKAGE_LOCALE_DIR])
+AH_TEMPLATE([PACKAGE_DOC_DIR])
+AH_TEMPLATE([PACKAGE_DATA_DIR])
+AH_TEMPLATE([PACKAGE_PIXMAPS_DIR])
+AH_TEMPLATE([PACKAGE_HELP_DIR])
+AH_TEMPLATE([PACKAGE_MENU_DIR])
+AH_TEMPLATE([PACKAGE_SOURCE_DIR])
+AH_TEMPLATE([GETTEXT_PACKAGE])
 
 AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR, "${packageprefix}/${packagedatadir}")
 AC_DEFINE_UNQUOTED(PACKAGE_DOC_DIR, "${packageprefix}/${packagedocdir}")
